# advent-of-code

./: .day_two.py.swp  .gitignore  .heap.c.swo  .heap.c.swp  .linked_list.c.swp  .linked_list.cpp.swo  .linked_list.cpp.swp  .max_pq.cpp.swp  .priority_q.cpp.swp  CMakeLists.txt  CMakelists.txt  README.md  a.out  day1.c  day1smol.txt  day2.scala  day2_part2  day2_part2.c  day2smol.txt  day3.c  heap.c  intresting_questions.txt  linked_list.c  max_pq_class.cpp  minmax.c  test.c  test.py  test_day2.py
.github/workflows/: clang-format.yml
2015/: a.out  add_string_num.c  day10.c  day2.py  day2_part2.py  day4.c  day4.cpp  day6.c  day7.py  day7_rm.txt  day8.c  day8.py  day8_part2.py  day9.py  faster.c  gen_secret_key.c  test.c  test.js  test2.c
2015/day1/: day1.c  day1.py  day1_part2.py
2015/day2/: day2_part2.c
2015/day3/: a.out  day3.c  day3.py
2015/day5/: day5.c
2015/day6/: day6_part2.ipynb
2015/day7/: day7.cc
2015/day9/: notebook.ipynb
2016/: a.out  day1.c  day1.ipynb  day1_rm.txt  day1_test.c  day3.c  day3_part2.c  day4.c  md5.c  shif_cipher.c
2016/day2/: day2_part2.c
2016/day4/: day4_part2.c
2016/day5/: day5.c
2017/: a.out  day1.c  day2.c  day2.py  day2_part2.c  evenly_divide.c  test.c  tokenize.c
2017/day4/: day4.c
2018/: a.out  day1_part2.cc
2018/day1/: day1.c
2019/: a.out  day1.c
2020/: a.out  day1.c  readme.md  regex.c  test.c  test.py
2020/day2/: day2.c  day2_part2.c
2021/: day1.c  day1.py  day1_part2.py  day2_part2.c
2021/day1/: day1_part2.c
2022/: bob.c  day1.py  day2.c  fileio.cpp  minmax.h  priority_q.c  priority_queue.cpp  priority_queue.h
2022/day2/: day_two.c  day_two.py
2023/: a.out  day1.cpp  day1_small.cpp  day2.ipynb  text.txt
2023/day1/: day1_part2  day1_part2.cpp
2023/day1_part2.dSYM/Contents/Resources/DWARF/: day1_part2
2024/: .day1.c.swp  a.out  day1.c  day2.c  day2_naive.c  day3.c  day3.py  remove_dub_from_sorted.c  test.c
2024/day1/: day1_part2.c
2024/day2/: day2_dump.c  day2_part2.c
2024/day3/: a.out
2025/day1/: a.out  day1_part2.c
2025/day2/: day2.c  day2.md  day2_part2.c
2025/day3/: day3.c  day3_part2.c
day2_part2.dSYM/Contents/: Info.plist
day2_part2.dSYM/Contents/Resources/DWARF/: day2_part2
day2_part2.dSYM/Contents/Resources/Relocations/aarch64/: day2_part2.yml
libs/: CMakeLists.txt
libs/dynamic_array/: dynamic_array.c
libs/dynamic_array/include/: dynamic_array.h
libs/set/: CMakeLists.txt  CMakelists.txt  set.c  set.h
libs/set/include/: set.h
src/: CMakeLists.txt  README.md
src/2015/: CMakeLists.txt
src/2015/day1/: day1.c  day1.py  day1_part2.c  day1_part2.py  streaming.c
src/2015/day10/: day10.c
src/2015/day11/: day11.c
src/2015/day12/: CMakeLists.txt  CMakelists.txt  day12.c  day12.py  test.json
src/2015/day13/: CMakeLists.txt  day13.c  day13.py  permutations.h
src/2015/day2/: day2.c  day2_part2.c  strtok.c
src/2015/day3/: day3.c  day3_part2.py
src/2015/day4/: day4.c  day4.cc  day4.py
src/2015/day5/: day5.c  day5_part2.c
src/2015/day6/: day6.c  day6.ipynb
src/2015/day8/: day8.c
src/2015/day9/: day9.cc  day9.py
src/2016/: CMakeLists.txt  md5.c  shif_cipher.c
src/2016/day1/: day1.c  day1_test.c
src/2016/day2/: day2_part2.c
src/2016/day3/: day3.c  day3_part2.c
src/2016/day4/: day4.c  day4_part2.c
src/2016/day5/: CMakeLists.txt  day5.c  day5_part2.c
src/2016/day6/: day6.c
src/2016/day7/: CMakeLists.txt  day7.c  day7_part2.c
src/2016/day8/: day8.c
src/2016/day9/: day9.c  day9_part2.c
src/2017/: evenly_divide.c  test2.c
src/2017/day1/: day1.c  day1_part2.c
src/2017/day2/: day2.c  day2_part2.c
src/2017/day25/: main.cc  main.py  turing_machine.cc  turing_machine.h  turing_machine.py
src/2017/day4/: day4.c
src/2017/day9/: day9.c
src/2018/day1/: day1.c
src/2018/day2/: day2.c
src/2019/: CMakeLists.txt
src/2019/day1/: day1.c
src/2019/day2/: CMakeLists.txt  day2.c  day2.py  day2_part2.c  day2_part2.py
src/2020/: CMakeLists.txt  adv_regex1.c  adv_regex2.c  regex.c  test.c
src/2020/day1/: day1.c
src/2020/day2/: day2.c  day2_part2.c
src/2020/day6/: CMakeLists.txt  day6.c  day6.py  day6_part2.c
src/2020/day8/: day8.cc  day8.py
src/2021/: CMakelists.txt
src/2021/day1/: day1.c  day1_part2.c
src/2021/day2/: day2.c  day2_part2.c
src/2021/day3/: CMakeLists.txt  CMakelists.txt  day3.c  day3_part2.c
src/2022/: bob.c  fileio.cpp  heap.c  linked_list.c  linked_list.cpp  max_pq.cpp  max_pq.h  max_pq_class.cpp  minmax.c  priority_q.c  priority_queue.cpp  priority_queue.h  split_string.c  test.c  test.lisp  test2.c
src/2022/day1/: day1.c  day1.scala
src/2022/day2/: day2.c  day2.cpp  day2.py  day2_part2.c  day_two.c
src/2022/day3/: day3.c
src/2023/: find_numbers.py  last_string.cpp  substring_index.cpp  surr_coor.py  test_version.cpp
src/2023/day1/: day1.cpp  day1_part2.cpp  day1_small.cpp  day1_small.txt
src/2023/day1/day1_part2.dSYM/Contents/Resources/Relocations/aarch64/: day1_part2.yml
src/2023/day3/: day3.ipynb
src/2024/: remove_dub_from_sorted.c
src/2024/day1/: day1_part2.c
src/2024/day2/: day2.c  day2_dump.c  day2_naive.c  day2_part2.c
src/2024/day3/: day3.c
src/2025/: CMakeLists.txt  CMakelists.txt
src/2025/day1/: day1.c  day1_part2.c
src/2025/day11/: CMakeLists.txt  day11.c
src/2025/day2/: day2_part2.c
src/2025/day3/: day3.c  day3_part2.c
src/2025/day4/: day4.c  day4_part2.c
src/2025/day5/: CMakeLists.txt  day5.c  day5_part2.c
src/2025/day6/: 2025_day6.txt  CMakeLists.txt  day6.c  day6_part2.c
src/2025/day7/: 2025_day7.txt  CMakeLists.txt  day7.c  day7_part2.c
src/2025/day9/: CMakeLists.txt  day9.c  day9_part2.c
